--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,16 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Konrad Szafer</title>
+
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-YJX8LM4892"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-YJX8LM4892');
+  </script>
+  
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -28,7 +38,7 @@
           I'm currently a research assistant at ETH Zurich, where I'm working on continual learning and world models, inspired by the way the brain learns.
         </p>
         <p>
-          Previously, I interned at Hugging Face, contributing to the LLM Evaluation team. I also spent half a year at CMU as a research assistant at AutonLab, where I worked on time-series foundation  models and model evaluation with limited labeled data.
+          Previously, I interned at Hugging Face, contributing to the LLM Evaluation team. I also spent half a year at CMU as a research assistant at AutonLab, where I worked on time-series foundation models and model evaluation with limited labeled data.
         </p>
         <p>
           I graduated from Poznan University of Technology with a BSc in Automatic Control and Robotics and an MSc in Artificial Intelligence, focusing both of my theses on representation learning and foundation computer vision models—covering 2D and 3D respectively.
